--- a/RWorksheet3b/RWorksheet_Cartoja#3b.Rmd
+++ b/RWorksheet3b/RWorksheet_Cartoja#3b.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Worksheet3b_Cartoja"
+title: "Worksheet_Cartoja#3b"
 author: "Jhona Mae Cartoja"
 date: "2022-11-21"
 output: pdf_document
